// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label Chip ActiveLabelChip smoke-test 1`] = `
<div class="css-view-175oi2r r-flexDirection-18u37iz r-flexWrap-1w6e6rj">
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-1iizze8 r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-active-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip-active"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div class="css-view-175oi2r r-alignSelf-1kihuf0 r-padding-tuq35u r-paddingLeft-1m04atk r-paddingRight-9aemit">
          <div dir="auto"
               role="img"
               tabindex="-1"
               class="css-text-146c3p1 r-backgroundColor-1niwhzg r-userSelect-lrvibr r-pointerEvents-633pao"
               style="font-size: 18px; color: rgb(29, 25, 43); transform: scaleX(1); line-height: 18px; font-family: material-community; font-weight: normal; font-style: normal;"
          >
            󰄬
          </div>
        </div>
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          errand
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Label Chip DefaultLabelChip smoke-test 1`] = `
<div class="css-view-175oi2r r-flexDirection-18u37iz r-flexWrap-1w6e6rj">
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-78d8zt r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          errand
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Label Chip DisplayNameLabelChip smoke-test 1`] = `
<div class="css-view-175oi2r r-flexDirection-18u37iz r-flexWrap-1w6e6rj">
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-78d8zt r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Display name
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Label Chip InvertedLabelChip smoke-test 1`] = `
<div class="css-view-175oi2r r-flexDirection-18u37iz r-flexWrap-1w6e6rj">
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-11oht4w r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-inverted-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip-inverted"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div class="css-view-175oi2r r-alignSelf-1kihuf0 r-padding-tuq35u r-paddingLeft-1m04atk r-paddingRight-9aemit">
          <div dir="auto"
               role="img"
               tabindex="-1"
               class="css-text-146c3p1 r-backgroundColor-1niwhzg r-userSelect-lrvibr r-pointerEvents-633pao"
               style="font-size: 18px; color: rgb(29, 25, 43); transform: scaleX(1); line-height: 18px; font-family: material-community; font-weight: normal; font-style: normal;"
          >
            󰄬
          </div>
        </div>
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          errand
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Label Chip ReadOnlyLabelChip smoke-test 1`] = `
<div class="css-view-175oi2r r-flexDirection-18u37iz r-flexWrap-1w6e6rj">
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-1iizze8 r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-active-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button aria-disabled="true"
            disabled
            role="button"
            tabindex="-1"
            class="css-view-175oi2r r-pointerEvents-12vffkv r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip-active"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          errand
        </div>
      </div>
    </button>
  </div>
</div>
`;
